--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SocialNetworkAnalyser
 @using SocialNetworkAnalyser.Models
+@using Microsoft.AspNetCore.Mvc.ViewFeatures
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
