Added main folder to hold main project and testing project.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -59,6 +59,11 @@ body {
 }
 
 /* Imported Datasets View Styles */
+
+.card--import {
+    max-width: 500px;
+}
+
 .alert--limit {
     max-width: 500px;
 }
